styles/styles.css
/* styles.css */

 body {
	color: #000000;	/* black */
	font-family: Georgia, Times New Roman, Times, serif;
	margin: 0px;
	-webkit-text-size-adjust: none;
}

#content {
	background-color:rgb(242, 120, 0);
    margin: auto;
    /* position: absolute; */
	top: 0; left: 0; bottom: 0; right: 0;
	text-align: center;
}

#glyph {
	color:white;
	font-size: 600px;
	margin-bottom: -144px;
	margin-top: -36px;
}

#occupancy {
	color:white;
	font-size: 48px;
	font-style: italic;
}

#instruction {
	font-size: 36px;
	padding: 1em;
}

